--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "ejs": "^2.5.6",
     "express": "~4.15.2",
+    "express-ejs-extend": "0.0.1",
     "express-session": "^1.15.2",
     "mongodb": "^2.2.29",
     "morgan": "~1.8.1",
