--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.2",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.15.2",
+    "get-age": "^1.0.1",
     "mongodb": "^2.2.29",
     "morgan": "~1.8.1",
     "nodemon": "^1.11.0",
